1 версия для доработки

--- a/docs/Light paper/001.md
+++ b/docs/Light paper/001.md
@@ -3,25 +3,26 @@
 Важно мнение каждого члена общества!
 Вы сами в праве выбирать, кем вам быть и как поступать!
 Полная свобода слова... Полная свобода действий... Каждый член общества несёт ответственность за свои поступки, тем самым создавая вокруг себя тот мир, в котором ему комфортно находиться!
-Общество само решает, что такое хорошо и что такое плохо! 
+Общество само решает, что такое хорошо и что такое плохо!
 Заслуженные поощрения добрых дел, и справедливые наказания за плохое поведение в обществе!
 Каждый может развивать свои личные качества, приносить пользу сообществу... Делать этот мир лучше!
 
 Как вам такая картина будущего?
-Похоже на агетацию очередного депутата перед выборами, но нет - это то, что мы хотим дать этому миру! И у нас есть конкретные решения поставленной задачи.
+Похоже на агитацию очередного депутата перед выборами, но нет! Это - то, что мы хотим дать этому миру! И у нас есть конкретные решения поставленной задачи.
 
-На сегодняшний день, большинство людей всего мира, слышали о криптовалюте и технологии блокчейн. У кого то это вызывает недоверие и ассоциируется с обманом, кто то, находясь в тренде успел неплохо поднять своё финансовое состояние на этом, ну и есть среди нас люди, которые слышали и просто наблюдают, задаваясь вопросом: "что же будет дальше? ". Так или иначе, какое-то своё отношение к этому всему, есть у каждого. Это и не хорошо, и не плохо.
+На сегодняшний день, большинство людей всего мира, слышали о криптовалюте и технологии блокчейн. У кого-то это вызывает недоверие и ассоциируется с обманом, кто то, находясь в тренде успел неплохо улучшить своё финансовое состояние на этом. Кто-то среди нас лишь слышал и просто наблюдет, задаваясь вопросом: "что же будет дальше?". Так или иначе, какое-то своё отношение к этому есть у каждого. Это не хорошо, и не плохо. Это – реальность времени, в которое мы живём!
 
-На самом деле, со времён первых крипто энтузиастов, технология блокчейн пережила множество реформаций, расширила свой потенциал, и открыла новые возможности перед людьми. Вот только человеческий фактор ни кто не отменял, и по итогу большинство продуктов на блокчейне, направлены либо на обман доверчивых людей, либо на тотальный контроль и последующее манипулирование обществом.
+На самом деле, со времён первых крипто энтузиастов, технология блокчейн пережила множество реформаций, расширила свой потенциал и открыла новые возможности перед людьми. Однако, «человеческий фактор» никто не отменял, и по итогу большинство продуктов на блокчейне, направлены либо на обман доверчивых людей, либо на тотальный контроль и последующее манипулирование обществом.
 
-Первые упоминания о блокчейне можно увидеть с начала 90-х годов (мы не будем описывать историю создания технологии и все её этапы. Кому интересно, вы можете вбить в любом поисковике "история создания блокчейн" и изучить множество статей на эту тему). Как вы думаете, что двигало этими людьми? - конечно же желание улучшить современный мир.
+Первые упоминания о блокчейне можно увидеть с начала 90-х годов (мы не будем описывать историю создания технологии и все её этапы. Кому интересно, может вбить в любой поисковой системе: "история создания блокчейн" и изучить множество статей на эту тему).
+Как вы думаете, что двигало этими людьми? На наш взгляд - конечно же желание улучшить современный мир.
 Исключить возможность подделывать различные документы, хранить свои данные безопасно, быстро и качественно обмениваться информацией и финансами по всему миру.
-Вы услышали хоть слово об обмане или мошенничестве? - нет.
-Блокчейн - это всего лишь технология, которая хранит данные и исключает возможность их изменения. И то, что в современном мире люди пользуются этим лишь с целью собственного обогащения, это не вина технологии - эта ответственность лежит на тех людях, которые себе позволяют это. А если копнуть глубже, то это само общество позволяет своим членам так себя вести!
+Вы услышали хоть слово об обмане или мошенничестве? – нет!
+Блокчейн, это - лишь технология, которая хранит данные и исключает возможность их изменения. И то, что в современном мире люди пользуются этим лишь с целью собственного обогащения - не вина технологии - эта ответственность лежит на тех людях, которые себе позволяют это. А если копнуть глубже, то это само общество позволяет своим членам так себя вести!
 
-Проект DES (Decentralized EcoSystems) создан в первую очередь для людей! Новые участники сети, смогут легко и безопасно погрузиться в мир современных технологий, а уже бывалые криптаны, смогут по достоинству оценить широкий функционал и перспективы, которые откроются перед ними. 
-Проект вобрал в себя лучшие идеи и решения в мире блокчейн на сегодняшний день. 
-DES является мостом между двумя мирами, благодаря которому, люди смогут  с уверенностью пользоваться новыми технологиями, а технологии будут качественно улучшать жизнь каждого человека и всего общества в целом!
+Проект DES (Decentralized EcoSystems) создан в первую очередь для людей! Новые участники сети, смогут легко и безопасно погрузиться в мир современных технологий, а уже бывалые криптаны, смогут по достоинству оценить широкий функционал и перспективы, которые откроются перед ними.
+Проект вобрал в себя лучшие идеи и решения в мире блокчейн на сегодняшний день.
+DES является мостом между двумя мирами, благодаря которому, люди смогут с уверенностью пользоваться новыми технологиями, а технологии будут качественно улучшать жизнь каждого человека и всего общества в целом!
 
-Мы считаем себя крипто анархистами, так как уже прошли ту фазу, когда мы просто верили в блокчейн технологии. Мы начали действовать. 
+Мы считаем себя крипто анархистами, так как уже прошли ту фазу, когда мы просто верили в блокчейн технологии. Мы начали действовать.
 Мы трудимся над созданием будущего, и будем рады найти поддержку таких же идейных, обычных людей, которые хотят изменить этот мир к лучшему!
