--- a/docs/Light paper/003.md
+++ b/docs/Light paper/003.md
@@ -1,25 +1,27 @@
 Глава 2. Мессенджер DESChat
 
-В имеющихся реалиях развития децентрализованных решений, постепенно появляется всё больше приложений WEB3.0. В том числе и мессенджеры. 
+В имеющихся реалиях развития децентрализованных решений, постепенно появляется всё больше приложений WEB3.0. В том числе и мессенджеры.
 При анализе имеющихся на рынке решений, становится понятно, что у всех современных мессенджеров, основанных на технологии блокчейн, имеется проблема скорости и плавности работы, а также, отсутствия привычных для пользователей централизованных мессенджеров функций и пользовательского опыта.
 Озвученные выше проблемы, современных децентрализованных мессенджеров приводят к тому, что им не хватает пользовательской аудитории. Клиенты, впервые скачав блокчейн-мессенджеры, не увидев в них привычного функционала и не получив достаточного пользовательского опыта, тут же разочаровываются и принимают решение удалить или просто не пользоваться таким не удобным решением.
 
-Как уже говорили ранее, мы собираем крипто энтузиастов, экспертов и обычных пользователей, для того чтобы объединиться при создании чего-то нового и глобального в интернете Блокчейнов. Открыть двери в мир WEB3.0. для каждого человека. 
-Основная задача в данном вопросе, это лёгкое и безопасное знакомство, и понимание этого глобального изменения интернета для всех. Помочь им не совершить ошибки впуская новый интернет в свою жизнь. 
-Какую ошибку допускает сейчас практически каждый новичок, начиная свой путь в технологии crypto? 
-Эта ошибка является главным врагом самой технологии. Это KYC! Как купить или получить свои первые токены? На, подтвердивших свою централизованную надёжность, биржах, в виде Дропов, Лаунчпадов или просто купить интересующие валюты? - Возможно.. Но, начиная свой путь таким образом, вы оставляете за собой нестираемый цифровой след.
-В интернете Блокчейнов, не нужны имена, фамилии, адреса и номера документов. Здесь, единственным подтверждением вашей личности должен оставаться ваш публичный ключ, ваш адрес в Блокчейн. 
-Мы не выступаем категорически против KYC и централизованных сервисов, но каждый человек должен делать этот выбор осознанно. И не в самом начале пути. 
+Как уже говорилось ранее, мы собираем крипто энтузиастов, экспертов и обычных пользователей, для того чтобы объединиться при создании чего-то нового и глобального в интернете Блокчейнов. Открыть двери в мир WEB3.0. для каждого человека.
+Основная задача в данном вопросе, это лёгкое и безопасное знакомство, и понимание этого глобального изменения интернета для всех. Помочь им не совершить ошибки впуская новый интернет в свою жизнь.
+Какую ошибку допускает сейчас практически каждый новичок, начиная свой путь в технологии crypto?
+Эта ошибка является главным врагом самой технологии. Это KYC! Как купить или получить свои первые токены? На, подтвердивших свою централизованную надёжность, биржах? В виде Дропов, на Лаунчпадах или просто купить интересующие валюты? - Возможно.. Но, начиная свой путь таким образом, вы оставляете за собой нестираемый цифровой след.
+В интернете Блокчейнов, не нужны имена, фамилии, адреса и номера документов. Здесь, единственным подтверждением вашей личности должен оставаться ваш публичный ключ, ваш адрес в Блокчейн.
+Мы не выступаем категорически против KYC и централизованных сервисов, но каждый человек должен делать этот выбор осознанно. И не в самом начале пути.
 
-Для знакомства с миром блокчейн и криптовалюты, мы предлагаем объединить продукт которым пользуются более 700 млн пользователей (Telegram messenger) и блокчейн технологию. Внедрить в базовый код месенджера возможность создавать децентрализованную учётную запись.
+Для знакомства с миром блокчейн и криптовалюты, мы предлагаем объединить продукт, которым пользуются более 700 млн пользователей (Telegram messenger) и блокчейн технологию. Внедрить в базовый код мессенджера возможность создавать децентрализованную учётную запись.
 
-На данный момент выбор децентрализованных мессенджеров достаточно скромен. У всех есть недостатки, такие как, плата за сообщения, не достаточно дружелюбный интерфейс, медленная скорость работы. Благодаря скоростному блокчейну и разносторонности данного проекта, мы способны выдавать высокукю скорость передачи данных, и в тоже время, сделать это всё максимально дешёвым. Платный контент безусловно будет, но это уже за дополнительные функции. Общаться друг с другом, хранить переписки, создавать свои группы, каналы и прочее, вы сможете абсолютно бесплатно со стороны сервиса и с минимальными комиссиями со стороны блокчейна. Более подробное опимание работы мессенджера вы сможете увидеть в технической части данного документа.
-Если прям в двух словах, то у вас будет привычный для вас мессенджер, с вашими контактами, группами, каналами, ботами и всем всем всем, к чему вы уже привыкли. Отличаться он будет лишь тем, что в нём будет встроен децентралзованный модуль, который позволит вам создать учётную запись в блокчейне, не привязанную к какой либо информации в реальном мире. Там вас будут ждать децентрализованные (DPN) соединения для безопасного посещения интернет пространства; децентрализованные файловые хранилища, в которых вы смело сможете хранить всё что захотите и быть уверенными, что доступ к «вашему» есть только у вас. 
-Постепенно, согласно дорожной карте, мессенджер будет дополняться различными модулями: крипто-кошелёк; децентрализованный браузер; социальная сеть; видеохостинг (гибридный: централизованный + децентрализованный); фотохостинг (гибридный: централизованный + децентрализованный); аудиохостинг (гибридный: централизованный + децентрализованный); быстрая NFT-зация контента аудио- фото- видеоконтента; синхронные аудиопереводы (голосовых и видеосообщений, а также файлов); децентрализованные аудио и видеозвонки; портфельный аналитик; функция быстрого обмена крипты на стейблы; аналитик стартапов. Более подробнее каждый модуль описан в технической части данного документа.
+На данный момент выбор децентрализованных мессенджеров достаточно скромен. У всех есть недостатки, такие как, плата за сообщения, недостаточно дружелюбный интерфейс, медленная скорость работы. Благодаря скоростному блокчейну и разносторонности данного проекта, мы способны выдавать высокукю скорость передачи данных, и в тоже время, сделать это всё максимально дешёвым. Платный контент безусловно будет, но это уже за дополнительные функции. Общаться друг с другом, хранить переписки, создавать свои группы, каналы и прочее, вы сможете абсолютно бесплатно со стороны сервиса и с минимальными комиссиями со стороны блокчейна. Более подробное описание работы мессенджера вы сможете увидеть в технической части данного документа.
+Если в двух словах, то у вы будете пользоваться привычным для вас мессенджером, с вашими контактами, группами, каналами, ботами и абсолютно всем тем функционалом, к которому вы уже успели привыкнуть. Отличаться он будет лишь тем, что в нём будет встроен децентрализованный модуль, который позволит вам создать учётную запись в блокчейне, не привязанную к какой-либо информации в реальном мире. Там вас будут ждать децентрализованные (DPN) соединения для безопасного посещения интернет-пространства; децентрализованные файловые хранилища, в которых вы смело сможете хранить всё что захотите и быть уверенными, что доступ к «вашему» есть только у вас.
+Постепенно, согласно дорожной карте, мессенджер будет дополняться различными модулями: крипто-кошелёк; децентрализованный браузер; социальная сеть; видеохостинг (гибридный: централизованный + децентрализованный); фотохостинг (гибридный: централизованный + децентрализованный); аудиохостинг (гибридный: централизованный + децентрализованный); быстрая NFT-зация контента аудио- фото- видеоконтента; синхронные аудиопереводы (голосовых и видеосообщений, а также файлов); децентрализованные аудио и видеозвонки; портфельный аналитик; функция быстрого обмена крипты на стейблы; аналитик стартапов. Более подробнее каждый модуль описан в технической части данного документа (WP?).
 
 Для более скорого введения в эксплуатацию данного продукта, первое время он будет базироваться на Telegram Боте. Это в разы снизит нагрузку на стартовые ресурсы времени и финансов, и позволит плавно знакомить всех пользователей Telegram с блокчейн технологиями.
 Данный алгоритм взаимодействия оболочки с блокчейном так же будет более подробно описан в технической части. Ну и как мы уже говорили, все исходные коды будут открыты, так что любой желающий сможет увидеть всё своими глазами. Всё это делается для людей, так что скрывать нам точно нечего.
-В дальнейшем будет использован децентрализованный месcенджер с открытым исходным кодом Adamant c обменом  данными на основе DPN и Decentralized Storage.
+В дальнейшем гибридный мессенджер будет реализован с привлечением решений децентрализованного мессенджера с открытым исходным кодом Adamant c обменом данными на основе DPN и Decentralized Storage.
 
-Естественно, при регистрации в нашей сети, люди будут получать различные знания в сфере цифровых технологий, крипто индустрии и прочих современных примудростях. Марафоны, академии, экспресс-тесты… всё это будет и всё это безусловно интересно. Но мы же понимаем, что один из более важных вопросов на данном этапе, это вопрос безопасности и стабильности. Почему именно этот проект? И что даёт ему уверенность в завтрашнем дне?
-Понимая обстановку дел, вопросу стабильности мы посвятили всю следующую главу...
+Естественно, при регистрации в нашей сети, люди будут получать различные знания в сфере цифровых технологий, крипто индустрии и прочих современных примудростях. Марафоны, академии, экспресс-тесты… всё это будет и всё это безусловно интересно. Но мы же понимаем, что один из более важных вопросов на данном этапе, это вопрос безопасности и стабильности!
+
+А теперь, мы постараемся ответить на вопросы, которые возможно Вас давно интересовали во время прочтения данного документа: почему именно этот проект? И что даёт ему уверенность в завтрашнем дне?
+Понимая обстановку дел, вопросу стабильности мы посвятили ему всю следующую главу...
