--- a/docs/Light paper/004.md
+++ b/docs/Light paper/004.md
@@ -1,21 +1,23 @@
 Глава 3. Стейблкоины DESS
-Как вы уже поняли из названия, речь пойдёт о стейблкоинах проекта DAO DES. Создать свой стейбл, это решение ни одного дня. Команда, работающая над проектом DES, провела огромную работу по анализу различных проектов, с целью выявления слабых мест, в следствии которых одни уже соскамились, другим осталось не долго, а третие вроде и перспективные, но что то мешает их прогрессу.
-На основе полученных данных, было принято единоглассное решение добавить в проект составляющую, которая укрепит его самостоятельность на открытом рынке. Благодаря собственному стейблкоину, повышается обоспеченность всего проекта различными криптовалютами. Упрощается вопрос привлечения инвестиций на дальнейшие разработки продуктов как от компании, так и от всего сообщества проекта. Ну и сама уникальность алгоритмов регулировки данного стейбла, закрепит данный продукт на рынке среди конкурентов… но об этом давайте по порядку.
+Как вы уже поняли из названия, речь пойдёт о стейблкоинах проекта DAO DES. Создать свой стейбл, это решение не одного дня. Команда, работающая над проектом DES, провела огромную работу по анализу различных проектов, с целью выявления слабых мест, в следствии которых одни уже соскамились, другим осталось не долго, а третьи, вроде и перспективные, но что-то мешает их прогрессу.
+На основе полученных данных, было принято единогласное решение добавить в проект составляющую, которая укрепит его самостоятельность на открытом рынке. Благодаря собственному стейблкоину, повышается обеспеченность всего проекта различными криптовалютами. Упрощается вопрос привлечения инвестиций на дальнейшие разработки продуктов как от компании (не влияя на рыночную ликвидность основного токена проекта), так и от всего сообщества проекта. Ну и сама уникальность алгоритмов регулирования данного стейбла, закрепит данный продукт на рынке среди конкурентов… но об этом давайте по порядку.
 
 На сегодняшний день можно выделить три основных типа стейблкоинов:
-Первые стейблкоины - Централизованные (USDT, USDC, BUSD). Обеспечиваются фиатными деньгами и эквивалентом в акциях, облигациях и т. д. Из плюсов можно выделить то, что они первые из стейблкоинов на рынке; у них большая капитализация; узнаваемость и часто - присутствие на большом количестве бирж. Из минусов: централизация; возможность на уровне смарт-контракта заблокировать токены; большие сомнения в достаточной обеспеченности полной эмиссии. 
-Следующие стейблкоины, обеспечиваемые криптовалютой (DAI. Другие популярные стейблкоины такого типа на рынке сложно найти). Из плюсов: высокая децентрализация и безопасность (в случае с DAI. Хотя, имеющая зависимость от централизованного USDC, обеспечивающего около 32% стоимости всей эмиссии DAI. Стоит отметить, что в Circle (Эмитент USDC) допустил возможность блокировки обеспечения, находящегося в смарт-контракте DAI; в случае с DAI – повышенная залоговая обеспеченность, что негативно сказывается на рентабельности применения и меньшей ликвидности проекта для самого эмитента. Минусы: участвуя в эмиссии DAI, пользователи должны вносить избыточное обеспечение, для получения нужного количества токенов. Так, например, для того, чтобы эмитировать DAI в эквиваленте $100, необходимо внести залоговое обеспечение, например в монете Eth в объёме не менее $150, чтобы позиции не были ликвидированы; высокие комиссии сети Ethereum.
-Ну и в заключении - Алгоритмические стейблкоины (USDD, USDN, UST (два последних на данный момент, радикально потеряли привязку к $)). Плюсы: высокая ликвидность обеспечивающей монеты и её рост с ростом капитализации обеспечиваемого стейблкоина. Минусы: Возможность утери привязки к целевой фиатной валюте при резких колебаниях рынка криптовалют и недостаточности проработки алгоритмов обеспечения;
+Первые стейблкоины - Централизованные (USDT, USDC, BUSD). Обеспечиваются фиатными деньгами и эквивалентом в акциях, облигациях и т. д. Из плюсов можно выделить то, что они первые из стейблкоинов на рынке; у них большая капитализация; узнаваемость и часто - присутствие на большом количестве бирж. Из минусов: централизация; возможность на уровне смарт-контракта заблокировать токены; большие сомнения в достаточной обеспеченности полной эмиссии.
+Следующие стейблкоины, обеспечиваемые криптовалютой (DAI. Другие популярные стейблкоины такого типа на рынке сложно найти). Из плюсов: высокая децентрализация и безопасность (в случае с DAI. Хотя, имеющаяся зависимость от централизованного USDC, обеспечивающего около 32% стоимости всей эмиссии DAI. Стоит отметить, что в Circle (Эмитент USDC) допустил возможность блокировки обеспечения, находящегося в смарт-контракте DAI; в случае с DAI – повышенная залоговая обеспеченность, что негативно сказывается на рентабельности применения и меньшей ликвидности проекта для самого эмитента. Минусы: участвуя в эмиссии DAI, пользователи должны вносить избыточное обеспечение, для получения нужного количества токенов. Так, например, для того, чтобы эмитировать DAI в эквиваленте $100, необходимо внести залоговое обеспечение, например в монете Eth в объёме не менее $150, чтобы позиции не были ликвидированы; высокие комиссии сети Ethereum.
+Ну и в заключении - Алгоритмические стейблкоины (USDD, USDN, UST (два последних на данный момент, радикально потеряли привязку к $) USDD – в последние месяцы, крайне редко подбирается к отметке хотя бы в 99 цента за доллар). Плюсы: высокая ликвидность обеспечивающей монеты и её рост с ростом капитализации обеспечиваемого стейблкоина. Минусы: Возможность утери привязки к целевой фиатной валюте при резких колебаниях рынка криптовалют и недостаточности проработки алгоритмов обеспечения;
 
-Кто в теме, тот знает, что на данный момент рынок не испытывает недостатка в представителях стейблкоинов. Их действительно много. Всех даже не упомнить. Однако, как говорилось выше, почти у всех из них есть какие-либо недостатки или даже критические уязвимости, которыми рано или поздно пользуются мошенники или конкуренты.
-Поэтому и было принято решение создать конкурентно способный продукт в данном направлении.
+Кто в теме, тот знает, что на данный момент рынок не испытывает недостатка в представителях экосистемы стейблкоинов. Их действительно много. Всех даже не упомнить. Однако, как говорилось выше, почти у всех из них есть какие-либо недостатки или даже критические уязвимости, которыми рано или поздно пользуются мошенники или конкуренты.
+Поэтому и было принято решение создать конкурентоспособный продукт в данном направлении.
 
 Ну вот мы и подошли к самому интересному. Активисты DAO DES намерены создать свою экосистему децентрализованных стейбл-коинов на основе комбинированного консенсуса (75% залоговое обеспечение (аналогично с DAI) + 25% алгоритмическое обеспечение собственной монетой DES), со следующими характерными преимуществами:
+
 - 75% залогового обеспечения формируется из не менее 15 самых децентрализованных криптовалют мира с большим комьюнити и разнонаправленной волатильностью (Список криптовалют выбран на основе анализа ТОПовых площадок по предоставлению информации. Анализ проводился командой DES);
 - 25% обеспечения реализуется алгоритмически, собственной монетой проекта DES;
-- За обеспечение в эквиваленте $100 можно будет получить 70-75 стейблкоинов deUSD (кол-во доступных стейблов зависит от рейтинга залоговой монеты).
-Более подробное описание продукта в технической части данного документа.
+- За обеспечение в эквиваленте $100 можно будет получить 70-75 стейблкоинов deUSD (кол-во эмитируемых стейблов зависит от рейтинга волатильности залоговой монеты).
+  Более подробное описание продукта в технической части данного документа.
 
-В дальнейшем будет создана возможность, каждому активному пользователю, создавать собственные стейблкоины прямо в кошельке. Будет ли это криптовалюта, или ранее не отцифрованная фиатная валюта, не имеет значения.  Бренды, товары, интелектуальные ценности… всё, что способно работать в соотвествии с общими принципами эмиссии и обеспечения, заложенными в алгоритм экосистемы, всё это можен иметь свою стабильность как в реальном, так и в цифровом мире децентрализованных экосистем. DES - это мост, который соединяет две реальности в одно будущее, которого мы так долго ждали.
+В дальнейшем будет создана возможность, каждому активному пользователю, создавать собственные стейблкоины прямо в кошельке. Будет ли это криптовалюта, или ранее не оцифрованная фиатная валюта, не имеет значения. Бренды, товары, интелектуальные ценности… всё, что способно работать в соотвествии с общими принципами эмиссии и обеспечения, заложенными в алгоритм экосистемы, всё это может и будет иметь свою стабильность как в реальном, так и в цифровом мире децентрализованных экосистем. DES - это мост, который соединяет две реальности в одно будущее, которого мы так долго ждали.
 
- Что же нам даст уверенность в завтрашнем дне? Да, стабильность это хорошо. Система будет работать. Но как быть с безопасностью… Кто защитит нас от мошенников, злоумышленников и тех, кто жаждит власти над всем миром? ...есть ли спасение от всего этого в мирном мире? Об этом мы поговорим в следующей главе… 
+Что же нам даст уверенность в завтрашнем дне? Да, стабильность, это - хорошо! Система будет работать. Но как быть с безопасностью… Кто защитит нас от мошенников, злоумышленников и тех, кто жаждет власти над всем миром? ...есть ли спасение от всего этого в мирном мире?
+Об этом мы поговорим в следующей главе…
