--- a/docs/Light paper/008.md
+++ b/docs/Light paper/008.md
@@ -1,29 +1,27 @@
 Глава 7. Система учёта активности.
 
-Вот мы и подошли к самому интересному разделу нашей книги. Все вознаграждения, достижения, выпуск (майнинг) новых монет — всё это контролируется и учитывается «Системой учёта активности». Что бы сформировать полный образ этой системы, давайте начнём с самого начала…
+Вот мы и подошли к самому интересному разделу нашей книги. Все вознаграждения, достижения, выпуск (майнинг) новых монет — всё это контролируется и учитывается «Системой учёта активности». Чтобы сформировать полный образ этой системы, давайте начнём с самого начала…
 
-При регистрации в сети, пользователь может выбрать, будет он участвоввать в жизни эко системы, или просто хочет пользоваться продуктами без лишней огласки. Но в любом случае, если участник нарушает общепринятые правила сети, то он получает штраф и высвечивается в базе данных о нарушителях. При втором варианте, человек просто создаёт кошелёк, придумывает ник-нейм, и все участники будут его видеть и знать только как набор этих символов.
-Когда пользователь выбирает первый вариант, ему создаётся личный кабинет, где он может заполнить свой образ в сети: проф.ориентацию (трудовые корочки по специальности, дипломы, пройденные курсы) любимые темы для обсуждений, все возможные спортивные и прочие достижения, личные данные (дата/место рождения, настоящие ФИО, краткую инфу о себе), в общем всё, чем бы ему хотелось поделиться с другими участниками сети. Надо понимать, что децентрализация, это не равно анонимность. Децентрализация может гарантировать анонимность, но это лишь малая часть её возможностей. Суть децентрализации в том, что все обязанности распределенны между всеми участниками сети. Здесь нет главных, нет одного места где всё хранится, нет кого то, кто собирает все данные в каких то своих целях. Вся власть и управление находится у сообщества, поэтому мы и уделили так много внимания этому направлению. 
-Активность делится на три вида: финансовая, интелектуальная и социальная. Давайте в кратце разберём каждую…
+При регистрации в сети, пользователь может выбрать, будет он участвовать в жизни экосистемы, или просто хочет пользоваться продуктами без лишней огласки. Но в любом случае, если участник нарушает общепринятые правила сети, то он получает штраф и высвечивается в базе данных о нарушителях. При втором варианте, человек просто создаёт кошелёк, придумывает ник-нейм, и все участники будут его видеть и знать только как набор этих символов.
+Когда пользователь выбирает первый вариант, ему создаётся личный кабинет, где он может заполнить свой образ в сети: проф. ориентацию (портфолио, профессиональные опыт и любую другую информацию, которую считает полезной для сообщества) любимые темы для обсуждений, всевозможные спортивные и прочие достижения, личные данные (дата/место рождения, настоящие ФИО, краткую инфу о себе), в общем всё, чем бы ему хотелось поделиться с другими участниками сети. Надо понимать, что децентрализация, это не равно анонимность. Децентрализация может гарантировать анонимность, но это лишь малая часть её возможностей. Суть децентрализации в том, что все обязанности распределены между всеми участниками сети. Здесь нет главных, нет одного места, где всё хранится, нет кого то, кто собирает все данные в каких-то своих целях. Вся власть и управление находится у сообщества, поэтому мы и уделили так много внимания этому направлению.
+Активность делится на три вида: финансовая, интеллектуальная и социальная. Давайте вкратце разберём каждую…
 
-Про финансовую привлекательность мы с вами уже слышали из прошлой главы. Понятно, что человек вкладывая деньги, хочет получить больше денег. И мы постарались создать максимально привлекательные условия для различных инвестиционных направлений. Но что бы зарабатывать по настоящему хорошие деньги, без рейтинга ни куда.
-За любые вложения, участник сети получает финансовые токены активности. Чем больше стейк, тем больше рейтинг. Статус вклада тоже имеет значение. Чем большую пользу для проекта несёт ваш вклад, тем больше у вас рейтинг. Для примера сравним вложение в какой либо продукт и в пул валидаторов. Естественно с пула валидаторов вы получите больше токенов рейтинга, так как данное вложение очень важно для работы всей сети, но в то же время у вас будет меньший процент доходности с данной инвестиции. Поэтому выбор за вами, или получать больше прибыли в моменте, или же выбрать более долгосрочную стратегию, добиться возможности стать обладателем токенов управления какого либо DAO проекта, и получать хорошие вознаграждение.
+Про финансовую привлекательность мы с вами уже слышали из прошлой главы. Понятно, что человек вкладывая деньги, хочет получить больше денег. И мы постарались создать максимально привлекательные условия для различных инвестиционных направлений. Но что бы зарабатывать по-настоящему хорошие деньги, без рейтинга ни куда.
+За любые вложения, участник сети получает финансовые токены активности (либо дополнительные токены финансовой активности к своему SBT). Чем больше стейк, тем больше рейтинг. Статус вклада тоже имеет значение. Чем большую пользу для проекта несёт ваш вклад, тем больше у вас рейтинг. Для примера сравним вложение в какой-либо продукт и в пул валидаторов. Естественно, с пула валидаторов вы получите больше токенов рейтинга, так как данное вложение очень важно для работы всей сети, но в то же время у вас будет меньший процент доходности с данной инвестиции. Поэтому выбор за вами, или получать больше прибыли в моменте, или же выбрать более долгосрочную стратегию, добиться возможности стать обладателем токенов управления какого-либо DAO проекта, и получать хорошее вознаграждение.
 
-Следующая активность интелектуальная. Здесь участники раскрывают свои способности в области улучшения продуктов компании, получают возможность создавать своих продукты и различные модули на платформе эко системы DES. 
-За каждый созданный продукт, который приносит пользу проекту и сообществу, участник сети получает интелектуальные токены активности. Так как он создаёт свой продукт, следовательно он изначально имеет токены управления данного продукта. Компания делится с ним комиссией с транзакций его продукта. Получается, чем больше людей пользуются его детищем, тем больше он будет получать вознаграждения от компании. 
-За исправление ошибок, нахождение багов, улучшения произсодительности, масштабирование сети и прочее, активные участники так же будут получать токены активности. Это уникальная возможность, благодаря которой толковые ребята во всём интернет пространстве, смогут реализоваться как высококлассные специалисты, эксперты в различных отраслях, будут иметь возможность стать участником совета управления мировой компании, не имея при этом ни гроша за плечами — только голова на плечах.
-Социальная акивность подразумевает под собой участие во внутренних делах компании (выражать своё мнение по различным вопросам на информационных ресурсах компании, предлагать различные решения насущных вопросов, акцентировать внимание сообщества на важных моментах сети и всё всё всё что относится к жизни сообщества). Так же будет учитываться активность в различных социальных сетях, продвижение проекта, обзоры и прочее… в общем, всё что связанно с информированием людей о нашем проекте, и с привлечением новых членов сообщества DES, всё это будет вознаграждаться социальными токенами акивности.
-В компании будет действовать одноуровневая партнёрская программа с единоразовыми выплатами. Как мы уже говорили, что выпуск (майнинг) новых монет осуществляется только проявлением активности участников сети. Нет ни каких процентов со стейков, ни каких увеличений процентов за количество приглашённых — определённое целевое действие, даёт определённое вознаграждение… Всё!
-
+Следующая активность интеллектуальная. Здесь участники раскрывают свои способности в области улучшения продуктов компании (улучшения имеющихся и предложения сообществу новых) в частности и самой компании в общем, получают возможность создавать свои продукты и различные модули на платформе эко системы DES.
+За каждый созданный продукт, который приносит пользу проекту и сообществу, участник сети получает интеллектуальные токены активности (либо дополнительные токены интеллектуальной активности к своему SBT). Так как он создаёт свой продукт, следовательно он изначально имеет токены управления данного продукта. Компания делится с ним комиссией с транзакций по его продукту. Получается, чем больше людей пользуются его детищем, тем больше он будет получать вознаграждении от компании.
+За исправление ошибок, нахождение багов, улучшения производительности, масштабирование сети и прочее, активные участники также будут получать токены активности. Это уникальная возможность, благодаря которой толковые ребята во всём интернет-пространстве, смогут реализоваться как высококлассные специалисты, эксперты в различных отраслях, будут иметь возможность стать участниками совета управления мировой компании, не имея при этом ни гроша за плечами — только голова на плечах.
+Социальная активность подразумевает под собой участие во внутренних делах компании (выражение своего мнения по различным вопросам на информационных ресурсах компании, предлагать различные решения насущных вопросов, акцентировать внимание сообщества на важных моментах сети и что-либо прочее, что относится к жизни сообщества и проекта). Также будет учитываться активность в различных социальных сетях, продвижение проекта, обзоры и прочее… в общем, всё, что связанно с информированием людей о нашем проекте, и с привлечением новых членов сообщества DES, всё это будет вознаграждаться социальными токенами активности (либо дополнительными токенами социальной активности к своему SBT).
+В компании будет действовать одноуровневая партнёрская программа с единоразовыми выплатами за приглашение партнёров, которые стали активными участниками проекта.  
 Так же будет реализована промежуточная система вознаграждений.
-При каждой активности, по мимо вознаграждений за целевые действия, участники сети будут получать бонусы достижений. К примеру: пригласил первого человека — получил бонус достижения, пригласил ещё 10 — достиг второго бонуса, и так далее. Подобным образом действуют и остальные активности: Сделал первое вложение в какой либо пул — получил бонус, довёл свой стейк до определённой суммы, так же достиг определённого бонуса. Создал продукт — бонус, несколько продуктов — бонус, продукт достиг определённого кол-ва транзакций — бонус. 
-Все бонусы достижений так же взаимодействуют с «Системой учёта активности». Именно достижения дают возможность участникам сети вступить в совет управления какого либо DAO компании. Для этого участникам надо будет проявлять активность минимум по двум разным направлениям. 
-Например: участник должен иметь определённый стейк в каком либо пуле и пригласить какое то кол-во новых пользователей; либо активно проявлять себя в интелектуальном направлении и иметь минимальный стейк в каком либо пуле.
+При каждой активности, помимо вознаграждений за целевые действия, участники сети будут получать бонусы достижений. К примеру: пригласил первого активного участника проекта — получил ачив-бонус, пригласил ещё 10 — достиг ачив-бонус 2-го уровня, и так далее. Подобным образом действуют и остальные активности: Cделал первое вложение в какой-либо пул — получил бонус, довёл свой стейк до определённой суммы, так же достиг определённого бонуса. Создал продукт — бонус, несколько продуктов — бонус, продукт достиг определённого кол-ва транзакций — бонус.
+Все бонусы достижений так же взаимодействуют с «Системой учёта активности». Именно достижения дают возможность участникам сети вступить в совет управления какого-либо DAO компании. Для этого участникам надо будет проявлять активность минимум по двум разным направлениям.
+Например: участник должен иметь определённый стейк в каком-либо пуле и пригласить какое-то кол-во новых активных участников сети; либо активно проявлять себя в интеллектуальном направлении и иметь минимальный стейк в каком-либо пуле.
 
-Увеличивая свой рейтинг активности в каких либо направлениях, зарабатывая бонусы достижения, участники сети могут стать «Экспертами проекта». Эксперты проекта могут помогать новым участникам разобраться во всех ньансах эко системы, оказать поддержку в запуске своего продукта и всё в этом духе. В общем, эксперты могут поделиться своим опытом с новым поколением. В профиле эксперта будет отображено, в каком направлении он развивается. Данные о его экспертности будут собираться за всё время его прибывание в сети, на основе его активности, поэтому новый участник сети с лёгкостью сможет ознакомиться с портфолио эксперта, и принять решение, нуждается он в его услугах или нет.
+Увеличивая свой рейтинг активности в каких-либо направлениях, зарабатывая ачив-бонусы, участники сети могут стать «Экспертами проекта». Эксперты проекта могут помогать новым участникам разобраться во всех нюансах эко системы, оказать поддержку в запуске своего продукта и всё в этом духе. В общем, эксперты могут поделиться своим опытом с новым поколением. В профиле эксперта будет отображено, в каком направлении он развивается. Данные о его экспертности будут собираться за всё время его прибывания в сети, на основе его активности, поэтому новый участник сети с лёгкостью сможет ознакомиться с портфолио эксперта и принять решение, нуждается он в его услугах или нет.
 Эксперты могут организовывать обучающие площадки, тренинги, ликбезы. Проводить как масштабные мероприятия, так и оказывать индивидуальные услуги по обучению участников сети.
 За свои знания и вложенное время, эксперты будут вознаграждаться согласно системе учёта активности сети (они так же будут участвовать в добыче новых монет).
 
-Давайте подведём итоги… каждое целевое действие участвует в эмиссии новых монет. Так же эти действия приносят токены активности (рейтинг), которые дают возможность стать членом совета какого либо DAO проекта, и зарабатывать на пассиве. На пути к достижению высоких целей, участники зарабатывают промежуточные бонусы (они так же участвуют в эмиссии новых монет). Проявляя активность, можно стать экспертом в каком либо направлении, и зарабатывать, обучая новых участников.
+Давайте подведём итоги… каждое целевое действие участвует в эмиссии новых монет. Также, эти действия приносят токены активности (рейтинг), которые дают возможность стать членом совета какого-либо DAO проекта, и зарабатывать на пассиве. На пути к достижению высоких целей, участники зарабатывают промежуточные бонусы (они так же участвуют в эмиссии новых монет). Проявляя активность, можно стать экспертом в каком-либо направлении, и зарабатывать, обучая новых участников.
 Подробный механизм взаимодействия Системы учёта активности со всей эко системой DES, описан в технической части данного документа.
-
